:uri-asciidoctor: http://asciidoctor.org
:icons: font
:source-highlighter: pygments
:nofooter:
link:index.html[Home]

== ChromeVim changelog

## 2.0.0
. support CVIM in mapping.html, options page and new-tab(blank.html) page.
. add defaut key map to pop up(detach) tab into new window; <kdb>wd</kbd> map to :tabdetach<cr>
. add defaut key map to pop up(detachWithChildren) tab into new window; <kdb>wD</kbd> map to tabDetachWithChildren
. fix problem of showTabIndex = true.
. fix next frame not working problem.
. adjust defaut key mapping.
. add <C-Up> <C-Down> to command panel to navigate in completion items.(<Tab><S-Tab> is keeped; up, down are used to command history).
. modify help page to contains other help info: shortcuts of chrome...
. add command 'openHintInTab' which is useful in google search.
.
. todo: add hint to goto scrollable element.
. todo: add feature to save and read config in gist.

== Mouseless Changelog


## 1.4.6:

 . Fixed `openLastDownload` in #127 #138
 . Fixed `UnicodeDecodeError: 'ascii' codec can't decode byte 0xe2 in position 487: ordinal not in range(128)`  in #139
 . fixed #135 css colors
 . fixed #137 cleared up documentation
 . added #132 tabs detach + goto (outliner based). Only works if chrome keeps the `openerTabId`.
 . fixed #134 disabled chrome url support


## 1.4.5

 . Updated list of `chrome://` completion URLs when `:chrome` is used
 . Fixed issue with `openPasteTab` [#573](https://github.com/1995eaton/chromium-vim/issues/573)
 . Allow global site matches in cVimrc. For example, the following will unmap `j` on all sites:
```
site '*://*' {
  unmap j
}
```
 . Fix issue with certain hints not showing up (like the GitHub profile icon in the top-right corner of the page).
 . Fix [#569](https://github.com/1995eaton/chromium-vim/issues/569) (mappings like `map <C-A-M-i> nextTab` would work, but `map <C-M-A-i> nextTab` wouldn't)